--- a/SUBHRRR_archive_subset.ipynb
+++ b/SUBHRRR_archive_subset.ipynb
@@ -177,7 +177,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://noaa-hrrr-bdp-pds.s3.amazonaws.com/hrrr.20200101/conus/hrrr.t00z.wrfsubhf00.grib2\"\n"
+    "# The URL code for data source\n",
+    "url = \"https://noaa-hrrr-bdp-pds.s3.amazonaws.com/hrrr.20200101/conus/hrrr.t00z.wrfsubhf00.grib2\""
    ]
   },
   {
@@ -226,6 +227,7 @@
     }
    ],
    "source": [
+    "# Set the forecast range\n",
     "fxx = range(0,19,1)\n",
     "list(fxx)"
    ]
