--- a/SUBHRRR_archive_subset.ipynb
+++ b/SUBHRRR_archive_subset.ipynb
@@ -261,6 +261,7 @@
     }
    ],
    "source": [
+    "# Creat a URL_list based on user DATE and fxx\n",
     "URL_list = [f'https://noaa-hrrr-bdp-pds.s3.amazonaws.com/hrrr.{DATE:%Y%m%d}/conus/hrrr.t{DATE:%H}z.wrfsubhf{f:02d}.grib2' for DATE in DATES for f in fxx]\n",
     "URL_list"
    ]
@@ -351,6 +352,7 @@
     }
    ],
    "source": [
+    "# for loop to download the data\n",
     "for i in range(0,len(URL_list)):\n",
     "    head = requests.head(URL_list[i])\n",
     "    check_exists = head.ok\n",
